completed restaurants endpoint

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ NODE_ENV=development
 PORT=3000
 APP_HOST=http://localhost:3000
 
-JWT_SECRET=1d962e9a-28af-4a00-ac05-d74e5e90a46d
+JWT_SECRET=sdbwfwebfiRvFF#$R#@$^$%^356tuvr8tur8nu98ewr
+# JWT_SECRET=1d962e9a-28af-4a00-ac05-d74e5e90a46d
 
 GOOGLE_CLIENT_ID=378251197836-sa4qcuhsi09g47e3082cealdfecpic69.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
